TestSuite/errors/err0433.pas
//exclude
{$savepcu false}
unit err0433;

type
  t1 = class end;
  
end.